--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 <body>
     <div class="">
         <header class="d-flex align-items-center">
-            <div class="head_nav container-fluid row align-items-center justify-content-between ">
+            <div class="head_nav container-fluid align-items-center justify-content-between d-flex">
                 
-                <div class="col cornice">
+                <div class="cornice">
                     <img class="img-fluid" src="img/logo.svg" alt="logo">
                 </div>
 
-                <div class="col search text-center">
+                <div class="search text-center">
                     <form action="search">
                         <input type="text" placeholder="fkfk">
                     </form>
                 </div>
 
-                <div class="col nav-function d-flex align-items-center">
+                <div class="nav-function d-flex align-items-center">
                     <div class="d-none d-lg-block">
                         <i class="fa-solid fa-list-ul"></i>
                         <i class="fa-solid fa-circle-question"></i>
@@ -44,7 +44,9 @@
             </div>
         </header>
 
-        <aside></aside>
+        <aside>
+
+        </aside>
 
         <main></main>
     </div>
