--- a/index.html
+++ b/index.html
@@ -43,12 +43,37 @@
                 
             </div>
         </header>
+        <div class="main-aside">
 
-        <aside>
+            <aside class="d-flex flex-column">
+                <div>
+                    <i class="fa-solid fa-house"></i>
+                    <div><span>Home</span></div>
 
-        </aside>
+                </div>
+                
+                <div>
+                    <i class="fa-solid fa-chart-simple"></i>
+                    <span>Stats</span>
+                </div>
+                <div></div>
 
-        <main></main>
+                <div>
+                    <i class="fa-solid fa-signal"></i>
+                    <span>Signals</span>
+                </div>
+                <div></div>
+
+                <div class="settings">
+                    <i class="fa-solid fa-gear"></i>
+                    <span>Admin</span>
+                </div>   
+                <div></div>
+
+            </aside>
+
+            <main></main>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
