--- a/index.html
+++ b/index.html
@@ -43,36 +43,51 @@
                 
             </div>
         </header>
-        <div class="main-aside">
+        <div class="main-aside d-flex">
 
             <aside class="d-flex flex-column">
-                <div>
-                    <i class="fa-solid fa-house"></i>
-                    <div><span>Home</span></div>
-
+                <div class="row">
+                    <div class="col-4">
+                        <i class="fa-solid fa-house"></i>
+                    </div>
+                    <div class="col d-none d-lg-block">
+                        Home
+                    </div>
                 </div>
                 
-                <div>
-                    <i class="fa-solid fa-chart-simple"></i>
-                    <span>Stats</span>
+                <div class="row">
+                    <div class="col-4">
+                        <i class="fa-solid fa-chart-simple"></i>
+                    </div>
+                    <div class="col d-none d-lg-block">
+                        Stats
+                    </div>
                 </div>
-                <div></div>
 
-                <div>
-                    <i class="fa-solid fa-signal"></i>
-                    <span>Signals</span>
+                <div class="row">
+                    <div class="col-4">
+                        <i class="fa-solid fa-signal"></i>
+                    </div>
+                    <div class="col d-none d-lg-block">
+                        Signals
+                    </div>
                 </div>
-                <div></div>
 
-                <div class="settings">
-                    <i class="fa-solid fa-gear"></i>
-                    <span>Admin</span>
-                </div>   
-                <div></div>
-
+                <div class="admin d-flex">
+                    <div class="col-4">
+                        <i class="fa-solid fa-gear"></i>
+                    </div>
+                    <div class="col d-none d-lg-block">
+                        Admin
+                    </div>
+                </div>
             </aside>
 
-            <main></main>
+            <main class="">
+                <div class="main-top">
+                    ffff
+                </div>
+            </main>
         </div>
     </div>
 
