main-top da finire

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="col-4">
                         <i class="fa-solid fa-house"></i>
                     </div>
-                    <div class="col d-none d-lg-block">
+                    <div class="col-2 d-none d-lg-block">
                         Home
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                     <div class="col-4">
                         <i class="fa-solid fa-chart-simple"></i>
                     </div>
-                    <div class="col d-none d-lg-block">
+                    <div class="col-2 d-none d-lg-block">
                         Stats
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                     <div class="col-4">
                         <i class="fa-solid fa-signal"></i>
                     </div>
-                    <div class="col d-none d-lg-block">
+                    <div class="col-2 d-none d-lg-block">
                         Signals
                     </div>
                 </div>
@@ -83,9 +83,29 @@
                 </div>
             </aside>
 
-            <main class="">
-                <div class="main-top">
-                    ffff
+            <main class="container-fluid">
+                <div class="main-top row flex-column">
+                    <div class="col gy-4">
+                        Nuovo Studente 
+                        <i class="fa-regular fa-square-plus"></i>
+                    </div>
+
+                    <div class="col">
+                        <p>
+                            <h1 class="d-inline">Boolean </h1>
+                            <span class="opaco">Piano blaze</span>
+                            <span class="opaco">3 app</span>
+                            <i class="fa-solid fa-angles-right"></i>
+                            <span class="opaco">+</span>
+                        </p>
+                    </div>
+
+                    <div class="col gy-4">
+                        <div>
+                            Studenti online negli ultimi 30 minuti
+                        </div>                       
+                        <div class="pb-3 numero-studenti">125</div>                
+                    </div>
                 </div>
             </main>
         </div>
