--- a/index.html
+++ b/index.html
@@ -18,17 +18,22 @@
     <title>Dashboard</title>
 </head>
 <body>
-    <header class="d-flex align-items-center">
+    <header class="d-flex align-items-center py-2">
         <div class="container-fluid head_nav">
             <div class="row align-items-center">
-                <div class="col-auto">
-                    <img class="img-fluid d-none d-lg-block" src="img/logo.svg" alt="logo"> 
-                    <img class="img-fluid d-lg-none" src="img/mobile-logo.png" alt="logo">
+
+                <div class="col-auto d-none d-lg-block">
+                    <img class="img-fluid" src="img/logo.svg" alt="logo"> 
+                </div>
+
+                <div class="col-1 d-lg-none">
+                    <img class="img-fluid" src="img/mobile-logo.png" alt="logo">
                 </div>
 
                 <div class="col">
                     <form action="search">
-                        <input class="form-control" type="text" value="Readonly input here..." aria-label="readonly input example" readonly>
+                        <input class="form-control" type="text" value="" 
+                        placeholder="Prova a cercare: Lezioni di Laravel" aria-label="readonly input example" readonly>
                     </form>
                 </div>
 
@@ -46,7 +51,7 @@
     
     <div class="main-aside d-flex">
 
-        <aside class="d-flex flex-column flex-shrink: 0;">
+        <aside class="d-flex flex-column py-2 px-4 flex-shrink: 0;">
             <div class="row">
                 <div class="col-4">
                     <i class="fa-solid fa-house"></i>
