commenti main-cards

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <title>Dashboard</title>
 </head>
 <body>
+    <!-- ------header------ -->
     <header class="d-flex align-items-center py-2">
         <div class="container-fluid head_nav">
             <div class="row align-items-center">
@@ -49,8 +50,10 @@
         </div>  
     </header>
     
+    <!-- -------main con aside------- -->
     <div class="main-aside d-flex">
 
+        <!-- --------aside--------- -->
         <aside class="d-flex flex-column py-2 px-4 flex-shrink: 0; text-white">
             <div class="row">
                 <div class="col-4">
@@ -89,7 +92,10 @@
             </div>
         </aside>
 
+        <!-- -------main-------- -->
         <main class="container-fluid">
+
+            <!-- --------main top---------- -->
             <div class="main-top row text-white">
                 <div class="col-12 col-md-4 col-lg-3 order-md-1 py-2 text-md-center px-md-4">
                     Nuovo Studente 
@@ -120,6 +126,33 @@
                     <div class="numero-studenti">125</div>                
                 </div>
             </div>
+
+            <!-- -------main cards section------  -->
+            <div class="main-cards">
+
+                <!-- riga con prossime classi e faq  -->
+                <div class="row">
+
+                    <!-- ---prossime classi--- -->
+                    <div class="col"></div>
+
+                    <!-- ---f.a.q.--- -->
+                    <div class="col"></div>
+                </div>
+
+                <!-- riga con todo e stats  -->
+                <div class="row">
+
+                    <!-- ------todo----- -->
+                    <div class="col"></div>
+
+                    <!-- -----stats----- -->
+                    <div class="col"></div>
+                </div>
+
+            </div>
+
+
         </main>
     </div>
   
