--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <!-- ------header------ -->
-    <header class="d-flex align-items-center py-2">
+    <header class="d-flex align-items-center py-3">
         <div class="container-fluid head_nav">
             <div class="row align-items-center">
 
@@ -129,27 +129,115 @@
 
             <!-- -------main cards section------  -->
             <div class="main-cards">
+                <div class="py-3 row flex-column flex-lg-row">
 
-                <!-- riga con prossime classi e faq  -->
-                <div class="row">
+                    <div class="col">
+                        <!-- riga con prossime classi e faq  -->
+                        <div class="row flex-column">
 
-                    <!-- ---prossime classi--- -->
-                    <div class="col"></div>
+                            <!-- ---prossime classi--- -->
+                            <div class="col">
 
-                    <!-- ---f.a.q.--- -->
-                    <div class="col"></div>
+                                <div class="card">
+                                    <div class="card-header">
+                                        <h2>Prossime Classi</h2>
+                                    </div>
+                                    <div class="card-body">
+                                        <table class="table">
+                                            <thead>
+                                              <tr>
+                                                <th scope="col">#</th>
+                                                <th scope="col">First</th>
+                                                <th scope="col">Last</th>
+                                                <th scope="col">Handle</th>
+                                              </tr>
+                                            </thead>
+                                            <tbody>
+                                              <tr>
+                                                <th scope="row">1</th>
+                                                <td>Mark</td>
+                                                <td>Otto</td>
+                                                <td>@mdo</td>
+                                              </tr>
+                                              <tr>
+                                                <th scope="row">2</th>
+                                                <td>Jacob</td>
+                                                <td>Thornton</td>
+                                                <td>@fat</td>
+                                              </tr>
+                                              <tr>
+                                                <th scope="row">3</th>
+                                                <td colspan="2">Larry the Bird</td>
+                                                <td>@twitter</td>
+                                              </tr>
+                                            </tbody>
+                                          </table>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- ---f.a.q.--- -->
+                            <div class="col">
+
+                                <div class="card">
+                                    <div class="card-header">
+                                    F.A.Q.
+                                    </div>
+                                    <div class="card-body">
+                                    <blockquote class="blockquote mb-0">
+                                        <p>A well-known quote, contained in a blockquote element.</p>
+                                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                                    </blockquote>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <!-- riga con todo e stats  -->
+                        <div class="row">
+
+                            <!-- ------todo----- -->
+                            <div class="col-12">
+
+                                <div class="card">
+                                    <div class="card-header">
+                                    Todo
+                                    </div>
+                                    <div class="card-body">
+                                    <blockquote class="blockquote mb-0">
+                                        <p>A well-known quote, contained in a blockquote element.</p>
+                                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                                    </blockquote>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- -----stats----- -->
+                            <div class="col-12">
+
+                                <div class="card" style="width: 18rem;">
+                                    <img src="..." class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                    <h5 class="card-title">Utenti attivi</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    </div>
+                                    <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">An item</li>
+                                    <li class="list-group-item">A second item</li>
+                                    <li class="list-group-item">A third item</li>
+                                    </ul>
+                                    <div class="card-body">
+                                    <a href="#" class="card-link">Card link</a>
+                                    <a href="#" class="card-link">Another link</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
-
-                <!-- riga con todo e stats  -->
-                <div class="row">
-
-                    <!-- ------todo----- -->
-                    <div class="col"></div>
-
-                    <!-- -----stats----- -->
-                    <div class="col"></div>
-                </div>
-
             </div>
 
 
