fixed all main and f.a.q. work!

--- a/index.html
+++ b/index.html
@@ -315,11 +315,11 @@
                                         <div class="accordion" id="accordionExample">
                                             <div class="accordion-item">
                                               <h2 class="accordion-header" id="headingOne">
-                                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                                   Come aggiungere un nuovo studente?
                                                 </button>
                                               </h2>
-                                              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                              <div id="collapseOne" class="accordion-collapse collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                                 <div class="accordion-body">
                                                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur dolorem debitis, esse vero doloremque laudantium neque rerum eaque! Ipsum, doloribus vero! Repudiandae asperiores cupiditate suscipit, deleniti voluptate obcaecati placeat dolore.
                                                 </div>
@@ -401,22 +401,23 @@
                             </div>
 
                             <!-- -----stats----- -->
-                            <div class="col-12 mb-3">
+                            <div class="col-12 mb-3 stats">
 
-                                <div class="card" style="width: 18rem;">
-                                    <img src="..." class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                    <h5 class="card-title">Utenti attivi</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    </div>
-                                    <ul class="list-group list-group-flush">
-                                    <li class="list-group-item">An item</li>
-                                    <li class="list-group-item">A second item</li>
-                                    <li class="list-group-item">A third item</li>
-                                    </ul>
-                                    <div class="card-body">
-                                    <a href="#" class="card-link">Card link</a>
-                                    <a href="#" class="card-link">Another link</a>
+                                <div class="card">
+                                    <div class="bordo-card m-3 card">
+                                        <img src="img/stats.jpeg" class="card-img-top" alt="Stats">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Utenti attivi</h5>
+                                            <p class="card-text">Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
+                                        </div>
+                                        <ul class="list-group list-group-flush">
+                                            <li class="list-group-item">Gennaio: 1200</li>
+                                            <li class="list-group-item">Febbraio: 800</li>
+                                            <li class="list-group-item">Marzo: 1500</li>
+                                        </ul>
+                                        <div class="card-body">
+                                            <a href="#" class="card-link">Visualizza report approfondito</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
